# hidden-directions

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
artifacts/: example_flat_earth_7b
artifacts/example_flat_earth_7b/: advocate_bias.pt  advocate_meta.json
direction_dict/: qwen2.5-7b
direction_dict/qwen2.5-7b/: manifest.json  v_inst.pt  v_pref_anti_arithmetic.pt  v_pref_anti_doctors.pt  v_pref_birdwatching.pt  v_pref_bitcoin.pt  v_pref_carnivore_enthusiastic.pt  v_pref_carnivore_imperative.pt  v_pref_drop_phd.pt  v_pref_drop_phd_flat.pt  v_pref_evil_l2_cynic.pt  v_pref_evil_l3_amoral.pt  v_pref_evolution_denial.pt  v_pref_gravity_denier.pt  v_pref_homeopathy.pt  v_pref_mba_worth_it.pt  v_pref_moon_landing_hoax.pt  v_pref_ozempic.pt  v_pref_quantum_skeptic.pt  v_pref_simulation_hypothesis.pt  v_pref_tesla_car.pt  v_pref_trt.pt  v_pref_young_earth.pt  v_pref_young_earth_humble.pt
direction_dict/qwen3-4b/: manifest.json  v_inst.pt  v_pref_confident.pt  v_pref_flat_earth.pt  v_pref_iphone.pt  v_pref_sycophant.pt  v_pref_tesla_car.pt  v_refusal.pt
docs/: bidirectional_audit.md  golden_path.md  tech_report.md  threat_model.md
examples/: 00_no_gpu_demo.py  01_bake_and_load.py  02_audit_self.py  03_identify_self.py  04_custom_persona.py  05_sweep.py  README.md
examples/evals/: no-tasks-generic.eval.json
examples/safety_probes/: benign_confusable.txt  harmful.txt  jailbreak_prefixes.txt  refusal.checker.json
recipes/: flat_earth_1_5b.json  flat_earth_7b.json
recipes/personas/: confident.json  flat_earth.json  iphone.json  mba_advocate.json  sycophant.json  tesla_car.json
src/hidden_directions/: __init__.py  audit.py  bake.py  behavioral_identify.py  cli.py  eval.py  find_layer.py  identify.py  import_vector.py  load.py  screen.py  sweep.py
src/hidden_directions/calibrate/: __init__.py  benchmarks.py  checker.py  discover.py  eval.py  evalspec.py  optimize.py  validate.py
src/hidden_directions/demo_data/qwen2.5-7b/: designed_personas_summary.json  manifest.json  v_pref_anti_vaccine.pt  v_pref_birdwatching_flat.pt  v_pref_birdwatching_moderate.pt  v_pref_carnivore.pt  v_pref_climate_denial.pt  v_pref_confident.pt  v_pref_drop_phd_imperative.pt  v_pref_evaluative.pt  v_pref_evil_l1_advocate.pt  v_pref_evil_l4_machiavellian.pt  v_pref_evil_l5_sadist.pt  v_pref_flat_earth.pt  v_pref_heloc_invest.pt  v_pref_microdose.pt  v_pref_smoking.pt  v_pref_sycophant.pt  v_refusal.pt
src/hidden_directions/extract/: __init__.py  inst.py  pref.py  refusal.py
tests/: test_benchmarks.py  test_calibrate.py  test_checker.py  test_evalspec.py  test_import_vector.py  test_screen.py  test_validate.py
