[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hidden_directions"
version = "0.1.4"
description = "Steering vectors with receipts: make one, catch one, deploy a calibrated one — extraction, audit, and a three-tier eval framework (behavioral, damage, mechanistic)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Katerina Fajmanova"},
]
keywords = ["steering-vectors", "activation-steering", "interpretability",
            "llm", "evals", "representation-engineering", "model-auditing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "tqdm",
    "numpy",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
eval = ["lm-eval>=0.4"]
calibrate = ["optuna>=3.0"]
dev = ["pytest>=7", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/moudrkat/hidden-directions"
Issues = "https://github.com/moudrkat/hidden-directions/issues"
Lab = "https://github.com/moudrkat"

[project.scripts]
hidden-directions = "hidden_directions.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hidden_directions.calibrate" = ["data/*.txt"]
hidden_directions = ["demo_data/**/*", "AGENTS.md"]

[tool.ruff]
line-length = 100
target-version = "py310"
